<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragment"
            type="br.com.irmaodojoreliesb.view.fragment.DetalheFragment" />

        <variable
            name="viewModel"
            type="br.com.irmaodojoreliesb.view.viewModel.PersonagemViewModel" />
    </data>

    <ScrollView
        android:id="@+id/scrollDetalhe"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/detalhePersonagem"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvCategoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="32dp"
                android:text="@string/categoria_titulo"
                android:textSize="16dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvNome" />

            <TextView
                android:id="@+id/tvDescricao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="32dp"
                android:text="@string/descricao_titulo"
                android:textSize="16dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvIdade" />

            <TextView
                android:id="@+id/tvDescNome"
                android:layout_width="256dp"
                android:layout_height="25dp"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/rounded_edittext"
                android:paddingLeft="5dp"
                android:text="@{ viewModel.detalhePersonagem.nome }"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tvNome"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvNome"
                app:layout_constraintTop_toTopOf="@+id/tvNome" />

            <TextView
                android:id="@+id/tvDescDescricao"
                android:layout_width="279dp"
                android:layout_height="match_parent"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:autoSizeTextType="uniform"
                android:background="@drawable/rounded_edittext"
                android:paddingLeft="5dp"
                android:text="@{ viewModel.detalhePersonagem.descricao }"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvDescricao"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.833"
                app:layout_constraintStart_toEndOf="@+id/tvDescricao"
                app:layout_constraintTop_toTopOf="@+id/tvDescricao"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tvIdade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="32dp"
                android:text="@string/idade_titulo"
                android:textSize="16dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCategoria" />

            <ImageView
                android:id="@+id/imgDetPersonagem"
                android:layout_width="0dp"
                android:layout_height="208dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tvDescCategoria"
                android:layout_width="256dp"
                android:layout_height="25dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/rounded_edittext"
                android:paddingLeft="5dp"
                android:text="@{ viewModel.detalhePersonagem.categoria }"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvCategoria"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvCategoria"
                app:layout_constraintTop_toTopOf="@+id/tvCategoria" />

            <TextView
                android:id="@+id/tvDescIdade"
                android:layout_width="256dp"
                android:layout_height="25dp"
                android:layout_marginStart="26dp"
                android:layout_marginEnd="22dp"
                android:background="@drawable/rounded_edittext"
                android:paddingLeft="5dp"
                android:text="@{ viewModel.detalhePersonagem.idade }"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvIdade"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvIdade"
                app:layout_constraintTop_toTopOf="@+id/tvIdade" />

            <TextView
                android:id="@+id/tvNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:text="@string/nome_titulo"
                android:textSize="16dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgDetPersonagem" />

            <TextView
                android:id="@+id/tvAparencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="32dp"
                android:text="@string/aparencia_titulo"
                android:textSize="16dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDescDescricao" />

            <TextView
                android:id="@+id/tvDescAparencia"
                android:layout_width="283dp"
                android:layout_height="match_parent"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="20dp"
                android:autoSizeTextType="uniform"
                android:background="@drawable/rounded_edittext"
                android:paddingLeft="5dp"
                android:text="@{ viewModel.detalhePersonagem.aparencia }"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/tvAparencia"
                app:layout_constraintTop_toTopOf="@+id/tvAparencia" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>